# bible-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE.md  README.md  app.py  compose.yaml  pyproject.toml  vercel.pro.json.example
.github/workflows/: ci.yml
bible_bot/: __init__.py  __main__.py  app.py  config.py  content.py  database.py  handlers.py  keyboards.py  messages.py  postgres_database.py  scheduler.py  states.py  time_utils.py
bible_bot/data/: new_testament.json  new_testament_chapters.json  reading_plan.json
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: build_bible_data.py  configure_qstash.py  configure_telegram.py
sql/: schema.sql
tests/: test_configure_qstash.py  test_content.py  test_database.py  test_messages.py  test_scheduler.py  test_time_utils.py  test_vercel_app.py
