[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bible-bot"
version = "0.1.0"
description = "Telegram bot that sends a daily New Testament verse in the Russian Synodal translation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.20,<4",
  "aiosqlite>=0.20,<1",
  "fastapi>=0.117,<1",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "httpx>=0.28,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
bible-bot = "bible_bot.app:run"

[tool.setuptools.packages.find]
include = ["bible_bot*"]

[tool.setuptools.package-data]
bible_bot = ["data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
